fix h3 overlap

--- a/css/sass/_screen_40em_min.scss
+++ b/css/sass/_screen_40em_min.scss
@@ -335,6 +335,7 @@
   min-height:150px;
   
   h2,
+  h3,
   .item-description,
   .tags {
     padding-left:150px;
